Fix date. Increase text contrast

--- a/src/theme/global.scss
+++ b/src/theme/global.scss
@@ -11,7 +11,7 @@ body {
   .wf-active & {
     font-family: 'Lato';
   }
-  color: #4d4d4d;
+  color: #3D3C3C;
   height: 100%;
   //Ugly hack. TODO: redo this
   & > div,
